# prisma-validate

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  INTEGRATION.md  README.md  package.json  pyproject.toml
examples/: 1_basic_validation.py  2_catch_apply_jobs_error.py  3_using_validation_markers.py  4_auto_detect_dialect.py  5_using_cli.md
scripts/: pre-commit-hook.sh  validate_sql_in_python.py
src/prisma_validate/: __init__.py  cli.py  converter.py  validator.py
tests/: test_converter.py  test_dialect_detection.py  test_validation_features.py  test_validator.py
tests/fixtures/: real.dmmf.json  sample.dmmf.json  sample.prisma
